2006-05-16  Erik Sandberg  <mandolaerik@gmail.com>
	* lily/percent-repeat-engraver.cc, lily/parser.yy,
	lily/define-music-types.cc, lily/percent-repeat-iterator.cc,
	lily/slash-repeat-engraver.cc,
	lily/include/percent-repeat-iterator.hh: Rework percent repeats:
	iterator sends PercentEvents

	* lily/time-scaled-music-iterator.cc, lily/tuplet-engraver.cc:
	rework tuplets: send start/stop events to engraver

2006-05-15  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/README.txt: update info for doc writers.

	* Documentation/user/programming-interface.itely: integrate
	Nicolas' fixes for chapter rewrite.

	* Documentation/user/ various: minor fixes.

2006-05-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/clef-engraver.cc: cleanup.

	* Documentation/user/GNUmakefile: dist context-example.eps too.

	* lily/key-engraver.cc (create_key): use
	explicitKeySignatureVisibility for cancellation too. Backportme.

	* lily/font-config.cc (init_fontconfig): don't close file if
	f==NULL. Backportme.

2006-05-15  Erlend Aasland  <erlenda@gmail.com>

	* Documentation/topdocs/NEWS.tely: niente and rotation news

2006-05-14  Erlend Aasland  <erlenda@gmail.com>

	* lily/include/stencil.hh
	* lily/stencil.cc (rotate): new function. Makes it possible
	to rotate a stencil around a given offset.

	* lily/grob.cc (get_print_stencil): add rotation support

	* lily/stencil-interpret.cc (interpret_stencil_expression):
	add rotation support

	* lily/stencil-scheme.cc (ly:stencil-rotate): new function

	* scm/define-grob-properties.scm: add 'rotation property

	* scm/define-markup-commands.scm: add rotate markup command
	
	* scm/output-ps.scm: add rotation support in PostScript backend

	* scm/output-svg.scm: add rotation support in SVG backend

2006-05-13  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/music-glossary.itely: French correction.

	* Documentation/user/programming-interface.itely: major
	new docs, some reorg, some info from Nicolas.
