@@ -1,4 +1,15 @@
+2006-05-16  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* python/musicxml.py (Part.interpret): don't complain about
+	incomplete measures.
+
+	* scripts/musicxml2ly.py (musicxml_voice_to_lily_voice): only add
+	new music if last_event_chord() returned None.
+
+	* python/musicxml.py (Part.interpret): skip back over chord notes.
+
 2006-05-16  Erik Sandberg  <mandolaerik@gmail.com>
+	
 	* lily/percent-repeat-engraver.cc, lily/parser.yy,
 	lily/define-music-types.cc, lily/percent-repeat-iterator.cc,
 	lily/slash-repeat-engraver.cc,
